--- a/src/main/resources/templates/employers/view.html
+++ b/src/main/resources/templates/employers/view.html
@@ -10,8 +10,17 @@
 <div class="job-listing">
     <p th:text="${'Name: ' + employer.name}"></p>
     <p th:text="${'Location: ' + employer.location}"></p>
+    <p>
+        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+    </p>
+    <p> Skills:
+    <ul>
+        <li th:each="skill : ${job.skills}">
+            <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+        </li>
+    </ul>
+    </p>
 </div>
-
 
 </body>
 </html>
